# django-logmachine-client

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
logmachine/: admin.py  apps.py  conf.py  handlers.py  models.py  serializers.py  tests.py  urls.py  views.py
logmachine/migrations/: 0001_initial.py
logmachine/requirements/: requirements-testing.txt
logmachine/tests/: test_client.py  test_handler.py  test_settings.py
